refactor: :recycle: api codgen
